Lotsa refactoring which should have been split in multiple commits.
--HG--
branch : adventuring